--- a/my_project.html
+++ b/my_project.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first project</title>
-    <link href="../my project/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
@@ -28,15 +28,15 @@
             <a href="" target="_blank">About</a>
           </li>
           <li>
-            <a href="" target="_blank">Articles</a>
+            <a href="articles.html" target="_self">Articles</a>
           </li>
           <li>
             <a href="" target="_blank">Submission</a>
           </li>
         </ul>
         <ul class="registerLoginBar">
-          <li><a href="../my project/register.html" target="_blank">Register</a></li>
-          <li><a href="../my project/register.html" target="_blank">Log in</a></li>
+          <li><a href="/register.html" target="_blank">Register</a></li>
+          <li><a href="" target="_blank">Log in</a></li>
         </ul>
     </nav>
 
@@ -77,20 +77,19 @@
         <section class="section80">
 
               <article class="article">
-                <header class="articleHeader articleHeaderImage">
+                <h2 class="articleHeaderImage"></h2>
+                <header class="sectionStyle">
                   <!-- <div id="styleAbbreviation"></div> -->
-                  <h2></h2>
-                  <h3></h3>
-                </header>
-                
-                <section class="styleAbstract">
                   <p class="articlesP">Articles</p>
                   <h3>The chalenges of ICT</h3>
                   <p>Author1, Author2, Author3, and Author4*</p>
                   <p>Human-centric Computing and Information Sciences volume 12, Article number: 48 (2022) Cite this article 2 Accesses</p>
+                </header>
+                
+                <section class="styleAbstract">
                   <h4 id="abstract">Abstract</h4>
                   <hr>
-                   <p><img src="../my project/assets/research.jpeg" class="responsiveImage"/>
+                   <p><img src="/assets1/research.jpeg" class="responsiveImage"/>
                     Lorem Ipsum è un testo segnaposto utilizzato nel settore della
                     tipografia e della stampa. Lorem Ipsum è considerato il testo
                     segnaposto standard sin dal sedicesimo secolo, quando un anonimo
@@ -239,9 +238,15 @@
                 </section>
               </article>
     </main>
-        <footer>
-        <p>All rights reserved</p>
+        <footer class="footer">
+          <div id="innerFooterContainer">
+            <a href="https://www.facebook.com" target="_blank"><img src="/icons/fb.svg"/></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="/icons/ig.svg"/></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="/icons/ln.svg"/></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="/icons/tw.svg"/></a>
+          </div>
+          <div id="innerFooter2Container">Copyright © 2023</div>
         </footer>
-        <script src="../my project/js/code.js" type="text/javascript"></script>
+        <script src="/js/code.js" type="text/javascript"></script>
 </body>
 </html>
