--- a/my_project.html
+++ b/my_project.html
@@ -22,13 +22,13 @@
     <nav class="nav">
         <ul class="mainBar">
           <li>
-            <a href="" target="_blank">Home</a>
+            <a href="#" onclick="onNavItemClick('/my_project.html'); return false;">Home</a>
           </li>
           <li>
             <a href="" target="_blank">About</a>
           </li>
           <li>
-            <a href="articles.html" target="_self">Articles</a>
+           <a href="#" onclick="onNavItemClick('/articles.html'); return false;">Articles</a>
           </li>
           <li>
             <a href="" target="_blank">Submission</a>
@@ -76,11 +76,11 @@
 
         <section class="section80">
 
-              <article class="article">
+              <!-- <article class="article">
                 <h2 class="articleHeaderImage"></h2>
-                <header class="sectionStyle">
+                <header class="sectionStyle"> -->
                   <!-- <div id="styleAbbreviation"></div> -->
-                  <p class="articlesP">Articles</p>
+            <!--  <p class="articlesP">Articles</p>
                   <h3>The chalenges of ICT</h3>
                   <p>Author1, Author2, Author3, and Author4*</p>
                   <p>Human-centric Computing and Information Sciences volume 12, Article number: 48 (2022) Cite this article 2 Accesses</p>
@@ -236,7 +236,8 @@
                   <h4 id="references">References</h4>
                   <hr>
                 </section>
-              </article>
+              </article> -->
+        </section>
     </main>
         <footer class="footer">
           <div id="innerFooterContainer">
