--- a/my_project.html
+++ b/my_project.html
@@ -41,10 +41,8 @@
         <li><a href="" target="_blank">Log in</a></li>
       </ul> -->
     </nav>
-
     <main>
       <aside class="aside20">
-
             <!-- <div id="hamburgerContainer" onclick="changeHamburgerIcon(); setInnerNavbarVisibility();">
               <p class="dropDownList">About</p>
               <div class="hamburger">
@@ -60,7 +58,6 @@
               <!-- <p>Linkedin: https://www.linkedin.com/in/dina-yem-18a0601b8/</p> -->
               <p>Sesso: femminile</p>
               <p>Nazionalità: kazaka</p>
-              <p>Data di nascita: 28/02/1983 </p>
             </div>
             <div>
             <br><br><br>
@@ -72,11 +69,9 @@
                   <li>Visual studio code</li>
                   <li>Github</li>
                   <li>Amadeus</li>
-                  <li>SAP</li>
               </ul>
               <ul><h3>Interessi professionali:</h3>
                   <li>Web developing</li>
-                  <li>Web analytics</li>
                   <li>User experience</li>
               </ul>
               <ul><h3>Lingue:</h3>
@@ -98,11 +93,11 @@
       <section class="section80">
         <div>
           <h2 id="about">About me</h2><hr>
-          <p> Mi chiamo Dina Yem. Sono kazaka, parlo italiano e inglese.</p>
-          <p>In Kazakistan l’esperienza lavorativa più significativa che ho maturato è stata presso l’azienda Samsung, dove mi sono occupata di amministrazione per 7 anni. </p>
-          <p> Nel 2018 sono venuta in Italia e nel 2021 ho conseguito la laurea magistrale in scienze cognitive con una successiva specializzazione in Linguistica Computazionale presso l’università di Trento. </p>  
-          <p>All'università ho ottenuto le prime conoscenze di programmazione e ho scritto la tesi sulla user experience. Dopo la laurea cercavo di specializzarmi in UX/UI e da qui è nato il mio interesse per il mondo IT. La vera passione mi è venuta facendo il corso "sviluppatore front end". Ho già imparato HTML, CSS, le basi di Javascript e Bootstrap. Adesso sto per iniziare ad acquisire React dopo di che ho intenzione di conoscere il lato server. In allegato invio il CV per approfondire il mio profile qualora apparisse interessante.
+          <p> Mi chiamo Dina Yem. Sono kazaka e abito in Italia da 4 anni. Parlo italiano e inglese.</p>
+          <p> Nel 2018 sono venuta in Italia e ho conseguito la laurea magistrale in scienze cognitive con una specializzazione in Linguistica Computazionale presso l’università di Trento. All'università ho ottenuto le prime conoscenze di programmazione e ho scritto la tesi sulla user experience (UX) del sistema smart home. 
+          <p>Seguendo la mia passione per il mondo Tech, ho deciso di specializzarmi nello sviluppo web. Ho appena finito il corso "Front-End Developer" e attualmente sto cercando uno stage per approfondire le competenze acquisite.
           </p>
+          
         </div>
         <div>
           <h2 id="education">Education</h2><hr>
@@ -111,7 +106,7 @@
             <h4>Musa Formazione e Lavoro/Italia</h4>
             <ul>
               <li>HTML5 / CSS3 / Javascript / Bootstrap / React</li>
-              <li>Link al mio progetto in corso: https://github.com/DinaYem/my-project</li>
+              <!-- <li>Link al mio profile su Github: https://github.com/DinaYem/my-project</li> -->
             </ul>
           </div>
           <div class="sectionStyle">
@@ -146,14 +141,6 @@
             <ul>
               <li>Quotazione, prenotazione and emissione dei biglietti aerei in Amadeus.</li>
               <li>Monitoraggio del cambio orari dei voli.</li>
-            </ul>
-          </div>
-          <div class="sectionStyle">
-            <h3>Back office commerciale (tirocinante)</h3>
-            <h4>Tecnoeka srl, Padova/Italia</h4>
-            <ul>
-              <li>Preparazione di preventivi, ordini e documenti di trasporto.</li>
-              <li>Archiviazione delle pratiche.</li>
             </ul>
           </div>
         </div>
